<resources>
    <string name="app_name">Project of feni</string>
    <string name="touristspotn1">বিজয় সিংহ দিঘী</string>
    <string name="touristspotn2">সালাম নগর</string>
    <string name="touristspotn3">মুহুরি প্রজেক্ট</string>
    <string name="touristspotn4">পাঁচগাছিয়া নারিকেল বাগান</string>
    <string name="touristspotn5">সমসের গাজীর কেল্লা</string>
    <string name="touristspotn6">ফেনী গোল্ডেন শিশু পার্ক</string>
    <string name="aboutme">Developer Name : Kazi Shakib Uddin.\nThe student of Feni Computer Institute.\n( FCI 13th Batch,TCT )\nFacebook Id : Kz Sakib\nEmail : kazisakib556@gmail.com\nAddress : Mathiara,Feni Sadar,Feni.</string>
    <string name="aboutfeni1">বাংলাদেশের ফেনী জেলার কিছু তথ্যসমূহ-\nবিভাগ	 : চট্টগ্রাম বিভাগ\nপ্রতিষ্ঠাকাল : ৭ নভেম্বর, ১৯৮৩\nমোট আয়তন : ৯২৮.৩৪ বর্গ কিলোমিটার\nমোট জনসংখ্যা(২০১১) : ১৪,৯৬,১৩৮\nজনঘনত্ব : ১৬০০/বর্গ কিলোমিটার (৪২০০/বর্গমাইল)\nসাক্ষরতার হার মোট	: ৫৯.৬০%\nপোস্ট কোড : ৩৯০০\nপ্রশাসনিক বিভাগের কোড : ২০৩০</string>
    <string name="feniweb">প্রাতিষ্ঠানিক ওয়েবসাইট : http://www.feni.gov.bd</string>
    <string name="aboutfeni2">প্রশাসনিক এলাকাসমূহ-\nফেনী জেলা ৬টি উপজেলা,৬টি থানা,৫টি পৌরসভা,৪৩টি ইউনিয়ন,৫৪০টি মৌজা,৫৬৪টি গ্রাম ও ৩টি সংসদীয় আসন নিয়ে গঠিত ।\nউপজেলাগুলো হল:\n১. ছাগলনাইয়া\n২. দাগনভূঁইয়া\n৩. পরশুরাম\n৪. ফুলগাজী\n৫. ফেনী সদর\n৬. সোনাগাজী\n\nমুক্তিযুদ্ধ-\n৬ ডিসেম্বর ফেনী জেলার বীর মুক্তিযোদ্ধারা পাক হানাদার বাহিনীকে পরাজিত করে ফেনীকে মুক্ত করেন । প্রতি বছর ৬ ডিসেম্বর দিনটিকে ফেনী জেলাবাসী ফেনী মুক্ত দিবস হিসেবে পালন করে । মুক্তিযুদ্ধে অসামান্য বীরত্বের জন্য ফেনীর ৩১ জন মুক্তিযোদ্ধাকে রাষ্ট্রীয় খেতাব দেওয়া হয় । খেতাব প্রাপ্ত মুক্তিযোদ্ধাদের মধ্যে ৪ জন বীর উত্তম , ৭ জন বীর বিক্রম এবং ২০ জন বীর প্রতীক খেতাবে ভূষিত হন ।\n\nশিক্ষা ব্যবস্থা-\nবিশ্ববিদ্যালয় : ২টি\nডিগ্রী কলেজ : ১১টি\nউচ্চ মাধ্যমিক কলেজ : ১০টি\nক্যাডেট কলেজ : ১টি (বালিকা)\nকারিগরী শিক্ষা প্রতিষ্ঠান : ১টি\nকম্পিউটার ইনস্টিটিউট : ১টি\nমাদ্রাসা : ৯৭টি\nমাধ্যমিক বিদ্যালয় : ১৫৫টি\nশিক্ষক প্রশিক্ষণ কেন্দ্র : ১টি
নিম্ন মাধ্যমিক বিদ্যালয় : ১৯টি\nপিটিআই : ১টি\nপ্রাথমিক বিদ্যালয় : ৫২৮টি\n\nদর্শনীয় স্থান-\n*কাজিরবাগ ইকো পার্ক\n*কালীদহ বরদা বাবু জমিদার বাড়ি\n*কৈয়ারা দীঘি\n*চাঁদ গাজী ভুঞার মসজিদ\n*চৌধুরী বাগান বাড়ী\n*জগন্নাথ কালী মন্দির\n*তৃপ্তি এগ্রো পার্ক\n*দাগনভূঁইয়া জমিদার বাড়ি\n*প্রতাপপুর জমিদার বাড়ি\n*ফেনী নদী\n*ফেনী বিমানবন্দর\n*বাঁশপাড়া জমিদার বাড়ি\n*বিজয় সিংহ দীঘি\n*ভাষা শহীদ সালাম গ্রন্থাগার ও স্মৃতি জাদুঘর\n*মুহুরী প্রজেক্ট\n*মোহাম্মদ আলী চৌধুরী মসজিদ\n*রাজাঝির দীঘি\n*শমসের গাজীর কেল্লা\n*শর্শাদী শাহী মসজি\n*শিলুয়া মন্দির\n*সাত মঠ\n*সেনেরখিল জমিদার বাড়ি\n\nউল্লেখযোগ্য ব্যক্তিত্ব-\n*আওরঙ্গজেব চৌধুরী –– বাংলাদেশ নৌবাহিনী প্রধান।\n*আনোয়ারউল্লাহ চৌধুরী –– ঢাকা বিশ্ববিদ্যালয় এর প্রাক্তন উপাচার্য।\n*আবদুল আউয়াল মিন্টু –– এফবিসিসিআই এর সাবেক প্রেসিডেন্ট এবং ভাইস চেয়ারম্যান বিএনপি।\n*আবদুস সালাম –– ভাষা শহীদ।\n*আবদুস সালাম –– বাংলাদেশ প্রেস ইন্সটিটিউটের প্রতিষ্ঠাতা এবং প্রথম মহাপরিচালক।\n*আবুল কালাম আজাদ চৌধুরী –– বিশ্ববিদ্যালয় মঞ্জুরী কমিশন (ইউজিসি)’র প্রাক্তন চেয়ারম্যান এবং প্রধানমন্ত্রীর উপদেষ্টা।\n*আমিন আহমদ –– প্রাক্তন বিচারপতি।\n*আমীন আহম্মেদ চৌধুরী –– বীর বিক্রম খেতাব প্রাপ্ত মুক্তিযোদ্ধা।\n*আহমেদ ফজলুর রহমান –– ঢাকা বিশ্ববিদ্যালয়ের প্রথম বাঙালি উপাচার্য।\n*ইকবাল সোবহান চৌধুরী –– সাংবাদিক নেতা এবং প্রধানমন্ত্রীর তথ্য উপদেষ্টা।\n*ইনামুল হক –– অভিনেতা, লেখক এবং নাট্যকার।\n*এ বি এম মূসা –– সাংবাদিক।\n*ওয়াসফিয়া নাজরীন –– পর্বতারোহী, এভারেস্ট বিজয়ী দ্বিতীয় বাঙালি নারী।\n*কাইয়ুম চৌধুরী –– চিত্রশিল্পী।\n*কাজী এবাদুল হক –– ভাষা সৈনিক এবং প্রাক্তন বিচারপতি।\n*খান বাহাদুর আবদুল আজিজ –– শিক্ষাবিদ, লেখক এবং সমাজকর্মী।\n*খালেদা জিয়া –– রাজনীতিবিদ, বাংলাদেশের প্রথম মহিলা প্রধানমন্ত্রী।\n*গাজীউল হক –– সাহিত্যিক, গীতিকার এবং ভাষাসৈনিক।\n*গিয়াস উদ্দিন সেলিম –– নাট্যকার, নাট্যনির্মাতা এবং চলচ্চিত্রকার।\n*গিয়াস কামাল চৌধুরী –– সাংবাদিক, কলামিস্ট এবং সংবাদ বিশ্লেষক।\n*জহির রায়হান –– ভাষা সৈনিক, চলচ্চিত্র পরিচালক, ঔপন্যাসিক এবং গল্পকার।\n*জহুর হোসেন চৌধুরী –– সাংবাদিক।\n*জয়নাল আবেদিন –– রাজনীতিবিদ।\n*জয়নাল হাজারী –– বাংলাদেশী প্রাক্তন সংসদ সদস্য এবং রাজনৈতিক ব্যক্তিত্ব।\n*জাফর ইমাম –– বীর মুক্তিযোদ্ধা এবং সাবেক মন্ত্রী।\n*জাহান আরা বেগম সুরমা –– রাজনীতিবিদ।\n*নজির আহমেদ –– ছাত্রনেতা এবং ঢাকা বিশ্ববিদ্যালয়ে সাম্প্রদায়িক দাঙ্গার তিনি প্রথম শিকার।\n*নিজাম উদ্দিন হাজারী –– রাজনীতিবিদ।\n*পান্না কায়সার –– রাজনীতিবিদ।\n*ফয়জুল মহিউদ্দিন –– শহীদ বুদ্ধিজীবী।\n*বেলাল চৌধুরী –– সাংবাদিক এবং প্রাবন্ধিক।\n*মকবুল আহমদ –– বাংলাদেশ জামায়াতে ইসলামীর আমির।\n*মহম্মদ আবুল কাসেম –– বাংলাদেশের বিশিষ্ট ব্যবসায়ী এবং শিল্পপতি।\n*মাসুদ উদ্দিন চৌধুরী –– রাজনীতিবিদ এবং প্রাক্তন সেনা কর্মকর্তা।\n*মুহাম্মদ মোশাররফ হোসেন –– ব্যবসায়ী, শিল্পপতি এবং রাজনীতিবিদ।\n*মোহাম্মদ সাইফুদ্দিন –– ক্রিকেটার।\n*রবিউল হক –– বীর বিক্রম খেতাব প্রাপ্ত মুক্তিযোদ্ধা।\n*রহিম উল্লাহ –– রাজনীতিবিদ।\n*রোকেয়া প্রাচী –– অভিনেত্রী এবং নাট্যকার।\n*শমসের গাজী –– ব্রিটিশ বিরোধী বিপ্লবী।\n*শমী কায়সার –– অভিনেত্রী এবং প্রযোজক।\n*শরিফা খাতুন –– শিক্ষাবিদ এবং ভাষা সৈনিক।\n*শহীদুল্লা কায়সার –– লেখক এবং বুদ্ধিজীবী।\n*শামসুন নাহার মাহমুদ –– নারী মুক্তি আন্দোলনের নেত্রী।\n*শাহরিয়ার কবির –– লেখক এবং সাংবাদিক।\n*শিরীন আখতার –– রাজনীতিবিদ।\n*শেখ পাশা হাবিব উদ্দিন –– সেনা কর্মকর্তা।\n*সাঈদ এস্কান্দার –– বাংলাদেশের প্রাক্তন সংসদ সদস্য এবং রাজনৈতিক ব্যক্তিত্ব।\n*সালাহউদ্দিন মমতাজ –– বীর মুক্তিযোদ্ধা।\n*সিরাজুল হক খান –– শহীদ বুদ্ধিজীবী।\n*সুমাইয়া কাজী –– নারী উদ্যোক্তা।\n*সুলতান মাহমুদ –– বীর উত্তম খেতাব প্রাপ্ত বীর মুক্তিযোদ্ধা।\n*সেলিনা পারভীন –– শহীদ বুদ্ধিজীবী।\n*সেলিম আল দীন –– নাট্যকার এবং গবেষক।\n*হবীবুল্লাহ বাহার চৌধুরী –– রাজনীতিবিদ, সাংবাদিক এবং ফুটবলার।\n\n***ফেনী শহরের প্রায় সকল মানুষই বেশ অতিথিপরায়ন।প্রানের শহরটাকে ফেনীবাসিরা খুব ভালোবাসে।***</string>
<string name="coronahotline"
    >The Covid-19 hotline numbers-\nIEDCR: 01550064901 , 01550064902 , 01550064903 , 01550064904 , 01550064905 , 01401184551 , 01401184554 , 01401184555 , 01401184556 , 01401184559 , 01401184560 , 01401184563 , 01401184568 , 01927711784 , 01927711785 , 01937000011 , 01937110011 .\na2i: 333\nDGHS: 16263\nHunting number: 01944333222\n*Best motivation for Corona Situation : Pray to Allah. Wash your hands until 20 second. Stay home. Stay Safe.
</string>
<string name="coronaweb">ওয়েবসাইট:http://www.corona.gov.bd</string>
    <string name="milktea">ফেনী শহরের সর্বোচ্চ চা বিক্রেতা গোফরান উদ্দিন । ৪০ বছর চায়ের সাথে আবদ্ধ তার জীবন। দোকানটি ফেনী শহরের ট্রাংক রোড এ শহীদ মিনারের দক্ষিণ পাশে অবস্থিত । দোকানটির নাম গোফরান স্টোর । বেশির ভাগ মানুষের কাছে ছয় কেতলি চায়ের দোকান হিসাবে পরিচিত । সকল শ্রেণি-পেশার মানুষ এখানে আসেন এবং তৃপ্তিসহকারে তার চা পান করেন । খুব অল্প সময়ের মধ্যইে তার চায়ের সুনাম ছড়িয়ে পড়ে সব জায়গায় । তার চা য়ে রয়েছে আলাদা বৈশিষ্ট্য এই জন্যই তার চায়ে চুমুক দিতে অনেক দূর দুরান্ত থেকে আসেন ভজন রশিক চা প্রেমিরা । অধিকাংশ গ্রাহক এক কাপ গরম চা খেয়ে কিছুক্ষণ অপেক্ষা করে আরেক কাপ খেয়ে তবেই বিদায় নেন।প্রতিদিন বিক্রি করেন ৮’শ থেকে ১ হাজার কাপ চা ।</string>
    <string name="redtea">লিবু দিয়ে তৈরি রং চা পান করতে প্রায়ই ভিড় জমে থাকে পাঁচগাছিয়াবাজারের নিকটবর্তী বিজয় সিং দিঘী রোডের পাশে অবস্থিত টং এর দোকান টিতে । হে এটাই ফেনীর সেরা রং চা দোকান এর স্বীকৃতি পেয়েছে । খুব ধৈর্য সহকারে পরিষ্কার পরিচ্ছন্নভাবে  দোকানদার এর চা তৈরির প্রকৃয়াটিই সকলকে অনেক মুগ্ধ করে এবং চায়ের স্বাধটাও অনেক মনোমুগ্ধকর । বেশির ভাগ সন্ধার পরেই দোকানে বেশ আড্ডা জমে উঠে বন্ধু,মুরুব্বি এবং অন্যান্য শ্রেনী পেশার মানুষদের মধ্যে ।</string>
    <string name="fcibdg">এটি ফেনী কম্পিউটার ইনস্টিটিউটের রক্তদান গ্রুপ । আহমেদ প্রীতম FCI Blood Donation Group এর সভাপতি । আহমেদ প্রীতমের মোবাইল নম্বর- 01640854413 এবং ফেসবুক আইডি- Ahamed Pritom ।</string>
    <string name="fcibdgfb">Facebook page- https://www.facebook.com/FCIbdg/</string>
    <string name="bloodbank">*Islami Bank Hospital Blood Bank (Call- 01992346631 , 8317090 , 8321495 ).\n*Quantum Lab (Call- 029351969 , +88029351969 , +8801714010869 ).\n*Blood Bank of Bangladesh Red Crescent Society (Call- 029139940 , 9116563 , 8121497 ).\n*Shandhani,Dhaka Dental College Branch (Call- 9011887 ).\n*Shandhani,Dhaka Medical College Branch (Call- 9668690 , 861674 ).\n*Sir Salimullah College Blood Bank (Call- 7319123 ).\n*Bangladesh Blood Bank and Transfusion Center (Call- 01850077185 ).
</string>

</resources>
