<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutfeniActivity"
    android:background="#10632A"
    android:orientation="vertical"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="340dp"
    android:layout_height="260dp"
    android:layout_gravity="center"
    android:layout_marginTop="3dp"

    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/mapfeni2"
        />

</androidx.cardview.widget.CardView>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/aboutfeni1"
                android:textSize="22sp"
                android:textColor="#DFE5EE"
                />

            <TextView
                android:id="@+id/feniweb_id"
                android:textColor="#E6CD34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/feniweb"
                android:textSize="22sp"
                />
            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutfeni2"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:textColor="#CFCDCD"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#E69595"
                android:text="(Source:Google)"
                android:textAlignment="center"
                />

        </LinearLayout>
    </ScrollView>




</LinearLayout>