<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120392"
    android:orientation="vertical"
    tools:context=".touristspotActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/bijoyspot_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bijoysingh"
                android:scaleType="fitXY"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn1"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/salamspot_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:src="@drawable/salamnogor"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn2"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/muhurispot_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_gravity="center"                                              android:src="@drawable/muhuriproject"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn3"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/paunchgachiaspot_id"
                android:layout_marginTop="2dp"                                               android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/narkelbagan"
                android:scaleType="fitXY"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn4"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/somserspot_id"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/samsergazi"
                android:scaleType="fitXY"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn5"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/fenispot_id"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/goldenpark"
                android:scaleType="fitXY"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touristspotn6"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/chowdhuripark_id"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_location"
                android:text="Location"
                android:textColor="#DB8FC0"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/chowdhurypark"
                    android:scaleType="fitXY"
                    />

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="চৌধুরী গার্ডেন পার্ক"
                android:textAlignment="center"
                android:textColor="#EED7E6"
                android:textSize="22sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#E69595"
                android:text="(Source:Google)"
                android:textAlignment="center"
                android:layout_margin="2dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>