<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blooddonationgroupe"
    android:orientation="vertical"
    android:background="#7512FF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FCI Blood Donation Group"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#03FA97"
        android:textSize="24sp"
        />

    <TextView
        android:text="@string/fcibdg"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:textColor="#FDF7F7"
        android:textSize="16sp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:id="@+id/fcibdgweb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fcibdgfb"
        android:textStyle="bold"
        android:textColor="#2FEE04"
        android:textSize="16sp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/bloodcall_id"
        android:background="@drawable/button2"
        android:text="  সভাপতিকে কল করুন"
        android:textSize="18sp"
        android:textColor="#F4F8FA"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_phone_in_talk_black_24dp"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:padding="10dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Blood Donors Club Bangladesh"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#03FA97"
        android:textSize="24sp"
        />
    <TextView
        android:text="এটি বাংলাদেশের একটি অনলাইনভিত্তিক ব্লাড ডোনার্স ক্লাব।এতে ফেনী জেলার কিছু ব্লাড ডোনারদের লিস্টও রয়েছে। নিচে এর ওয়েব লিঙ্কটা দেয়া হলো- "
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FDF7F7"
        android:textSize="16sp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/bdcbweb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Website link : http://www.blooddonorsbd.com/m/feni/?p=1"
        android:textStyle="bold"
        android:textColor="#2FEE04"
        android:textSize="16sp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Blood Banks List"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#03FA97"
        android:textSize="24sp"
        />
    <TextView
        android:text="@string/bloodbank"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:textColor="#FDF7F7"
        android:textSize="16sp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(Note: I will try to add more information in the next update version)"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#E69595"
        android:textSize="14sp"
        />
        </LinearLayout>

    </ScrollView>
</LinearLayout>